--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,intellij+all,rust,visualstudiocode
+.env
