--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2018"
 
 [dependencies]
 
+tokio = "0.2"
+dotenv = "0.15"
 sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono" ] }
+anyhow = "1.0"
